# nullmeet

./: .gitignore  Anchor.toml  README.md
app/: .gitignore  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/meet/[id]/: page.tsx
app/components/: DevnetTape.tsx  MeetingLobby.tsx  MeetingResult.tsx  MultiDaySlotSelector.tsx  ParticipantList.tsx  PhantomButton.tsx  ThemeToggle.tsx  WalletProvider.tsx
app/hooks/: useMeeting.ts  useNullmeet.ts  useTheme.ts
app/lib/: constants.ts  nullmeet-v2.json  pda.ts  socket.ts
programs/nullmeet-v2/: Cargo.toml
programs/nullmeet-v2/src/: lib.rs
server/: package-lock.json  package.json  server.js
