[package]
name = "nullmeet-v2"
version = "0.2.0"
description = "Nullmeet v2 — Multi-day, group scheduling with TEE privacy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nullmeet_v2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor", "access-control"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
